# Projekt-na-AIZO

./: CMakeLists.txt  README.md  main.cpp
ClassesAndHeaders/: ArgumentHolder.cpp  ArgumentHolder.h  FileReader.hpp  Game.hpp  Includes.h  Planszowka.hpp  SortingAlgorithms.hpp  Tests.hpp  TestsUtilities.hpp  Timer.cpp  Timer.h  Utilities.hpp  Vector.hpp
